[gd_scene load_steps=8 format=3 uid="uid://d1j52qixkvv0l"]

[ext_resource type="Script" path="res://3D/Object/sheet.gd" id="1_b4ltr"]
[ext_resource type="PackedScene" uid="uid://bym22d7ka3jlh" path="res://3D/Object/Interaction/interactable.tscn" id="1_rxx05"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tshuy"]
albedo_color = Color(0.929352, 0.874699, 0.676163, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8u0rg"]
material = SubResource("StandardMaterial3D_tshuy")

[sub_resource type="BoxShape3D" id="BoxShape3D_u17kt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_klkvk"]
shading_mode = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_va63v"]
material = SubResource("StandardMaterial3D_klkvk")

[node name="Sheet" type="Node3D"]
script = ExtResource("1_b4ltr")

[node name="Form" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 0.2, 0, 0, 0, 1.5, 0, 0, 0)
mesh = SubResource("BoxMesh_8u0rg")

[node name="Interactable" parent="." instance=ExtResource("1_rxx05")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 1, 0)
shape = SubResource("BoxShape3D_u17kt")

[node name="Highlight" type="MeshInstance3D" parent="."]
transform = Transform3D(1.05, 0, 0, 0, 1, 0, 0, 0, 0.8, 0, 0, 0)
visible = false
mesh = SubResource("PlaneMesh_va63v")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
